--- a/LightTube/wwwroot/css/desktop.css
+++ b/LightTube/wwwroot/css/desktop.css
@@ -397,6 +397,7 @@ a.icon-button, a.icon-button > img {
 
 .recommended-list {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     row-gap: 16px;
     padding: 16px;
@@ -404,6 +405,17 @@ a.icon-button, a.icon-button > img {
 }
 
 .recommended-list > .video {
+    display: grid;
+    grid-template-columns: 168px 1fr;
+    grid-template-rows: 94px;
+    grid-auto-flow: row;
+    grid-gap: 0 8px;
+    grid-template-areas: "thumbnail info";
+
+    color: var(--text-secondary);
+}
+
+.recommended-list > .playlist {
     display: grid;
     grid-template-columns: 168px 1fr;
     grid-template-rows: 94px;
@@ -472,7 +484,104 @@ a.icon-button, a.icon-button > img {
     font-size: small;
 }
 
+.video > .info > div > a > img {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+}
+
 .video > .info > .title {
+    color: var(--text-primary) !important;
+    font-weight: bold;
+    font-size: initial;
+    margin-bottom: 8px;
+}
+
+/* list playlist item */
+
+.playlist a {
+    text-decoration: none;
+    color: var(--text-secondary);
+}
+
+.playlist > .thumbnail {
+    grid-area: thumbnail;
+
+    background-color: #CCC;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    background-position-y: center;
+    background-size: cover;
+}
+
+.playlist > .thumbnail > div {
+    font-size: smaller;
+
+    background-color: #0008;
+    color: #fff;
+    padding: 2px;
+    width: 50%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 8px;
+}
+
+.playlist > .thumbnail > div > *:nth-child(1) {
+    font-size: x-large;
+}
+
+.playlist > .info {
+    grid-area: info;
+    font-size: small;
+}
+
+.playlist > .info > div > ul {
+    display: none;
+}
+
+.playlist > .info > .title {
+    color: var(--text-primary) !important;
+    font-weight: bold;
+    font-size: initial;
+    margin-bottom: 8px;
+}
+
+/* list channel item */
+
+.channel a {
+    text-decoration: none;
+    color: var(--text-secondary);
+}
+
+.channel > .avatar {
+    grid-area: thumbnail;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.channel > .avatar > img {
+    background-color: #CCC;
+
+    height: 136px;
+    width: 136px;
+}
+
+.channel > .info {
+    grid-area: info;
+    font-size: small;
+    padding-top: 32px;
+}
+
+.channel > .info > .name {
     color: var(--text-primary) !important;
     font-weight: bold;
     font-size: initial;
@@ -554,9 +663,82 @@ a.icon-button, a.icon-button > img {
     display: flex;
 }
 
-.pagination-buttons > *{
+.pagination-buttons > * {
     height: 3rem;
     line-height: 3rem;
     color: var(--text-secondary);
     text-decoration: none;
+}
+
+/* normal video list */
+
+.video-list {
+    max-width: 850px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    padding: 16px;
+}
+
+.video-list > .video {
+    text-decoration: none;
+    display: grid;
+    grid-template-columns: 280px;
+    grid-template-rows: 160px;
+    grid-auto-flow: row;
+    grid-gap: 0 16px;
+    grid-template-areas: "thumbnail info";
+
+    color: var(--text-secondary);
+}
+
+.video-list > .playlist {
+    text-decoration: none;
+    display: grid;
+    grid-template-columns: 280px;
+    grid-template-rows: 160px;
+    grid-auto-flow: row;
+    grid-gap: 0 16px;
+    grid-template-areas: "thumbnail info";
+
+    color: var(--text-secondary);
+}
+
+.video-list > .channel {
+    text-decoration: none;
+    display: grid;
+    grid-template-columns: 280px 1fr max-content;
+    grid-template-rows: 160px;
+    grid-auto-flow: row;
+    grid-gap: 0 16px;
+    grid-template-areas: "thumbnail info subscribe-button";
+
+    color: var(--text-secondary);
+}
+
+.video-list > .channel > .subscribe-button {
+    margin-top: 60px;
+}
+
+.video-list > .avatar {
+    display: none;
+}
+
+.video-list > .playlist > .info > div > ul {
+    display: block;
+    padding-left: 0;
+    list-style: none;
+}
+
+.video-list > .playlist > .info > div > ul > li > * {
+    color: var(--text-primary);
+    line-height: 24px;
+    height: 24px;
+    display: inline-block;
+}
+
+.video-list > .playlist > .info > div > ul > li:last-child > * {
+    color: var(--text-secondary);
+    text-transform: uppercase;
 }
