--- a/LightTube/Views/Youtube/Search.cshtml
+++ b/LightTube/Views/Youtube/Search.cshtml
@@ -5,6 +5,7 @@
 	ViewBag.Title = Model.Query;
 	Layout = "_Layout";
 	ViewData["DisableOldCss"] = true;
+	ViewData["UseFullSizeSearchBar"] = Model.MobileLayout;
 }
 
 <div class="video-list">
