--- a/LightTube/wwwroot/css/mobile.css
+++ b/LightTube/wwwroot/css/mobile.css
@@ -26,12 +26,21 @@ body {
     font-family: sans-serif;
 }
 
+html {
+    background-color: var(--app-background);
+}
+
 body.noguide {
     grid-template-areas: "top-bar top-bar" "app app";
 }
 
 * {
     box-sizing: border-box;
+    color: var(--text-secondary);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: var(--text-primary);
 }
 
 .top-bar {
@@ -46,7 +55,7 @@ body.noguide {
     padding: 0 16px;
 
     box-shadow: #0004 0 2px 5px;
-    background-color: #fff;
+    background-color: var(--top-bar-background);
 }
 
 .top-bar > form {
@@ -64,13 +73,13 @@ body.noguide {
     bottom: 0;
     height: 48px;
 
-    border-top: 1px solid #E5E5E5;
+    border-top: 1px solid var(--border-color);
 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 
-    background-color: #fff;
+    background-color: var(--guide-background);
 }
 
 .top-bar.full-size-search > .logo,
@@ -91,6 +100,8 @@ body.noguide {
     height: 40px;
     border: 1px solid var(--border-color);
     border-radius: 0;
+    color: var(--text-primary);
+    background-color: var(--item-active-background);
 }
 
 .top-bar.full-size-search > form > input[type=text] {
@@ -103,7 +114,7 @@ body.noguide {
 }
 
 .app {
-    background-color: #f9f9f9;
+    background-color: var(--app-background);
 }
 
 a.icon-link, a.icon-link > img {
@@ -125,22 +136,23 @@ a.icon-link, a.icon-link > img {
     flex-direction: column;
     font-size: x-small;
     align-items: center;
-    color: #000;
     text-decoration: none;
     justify-content: center;
+
+    color: var(--text-primary);
 }
 
 .guide-item > a > .icon {
     width: 24px;
-    margin-right: 0px;
+    margin-right: 0;
 }
 
 .guide-item:hover {
-    background-color: #f2f2f2;
+    background-color: var(--item-hover-background);
 }
 
 .guide-item.active {
-    background-color: #E5E5E5;
+    background-color: var(--item-active-background);
 }
 
 .hide-on-minmode {
@@ -150,7 +162,7 @@ a.icon-link, a.icon-link > img {
 /* top bar */
 
 .logo {
-    color: #000;
+    color: var(--text-primary);
     text-decoration: none;
     font-size: larger;
 }
@@ -179,8 +191,6 @@ a.icon-link, a.icon-link > img {
     align-items: center;
     justify-content: center;
 }
-
-/* TODO: search bar on /results */
 
 /* rich video grid */
 
@@ -291,7 +301,7 @@ a.icon-link, a.icon-link > img {
 }
 
 .video > .info > .title {
-    color: #000 !important;
+    color: var(--text-primary) !important;
 }
 
 /* list playlist item */
@@ -428,6 +438,7 @@ a.icon-link, a.icon-link > img {
 
 .video-title {
     font-size: large;
+    color: var(--text-primary);
 }
 
 .video-info-bar {
@@ -436,7 +447,7 @@ a.icon-link, a.icon-link > img {
     grid-auto-columns: 1fr;
     grid-template-columns: max-content max-content max-content 1fr max-content;
     grid-template-rows: max-content max-content;
-    gap: 0px 8px;
+    gap: 0 8px;
     grid-template-areas:
     "views . uploaddate divider divider"
     "engagementbar engagementbar engagementbar engagementbar ytlink";
@@ -608,14 +619,14 @@ a.icon-link, a.icon-link > img {
 .channel-banner {
     display: block;
     width: 100%;
-    height: fit-content;
+    height: auto;
     aspect-ratio: 6.2;
     background-color: #000a;
     background-size: contain;
 }
 
 .channel-info-container {
-    background-color: #fff;
+    background-color: var(--channel-info-background);
 }
 
 .channel-info-container > .channel-info {
@@ -639,6 +650,14 @@ a.icon-link, a.icon-link > img {
     color: var(--text-secondary);
 }
 
+.channel-page > p {
+    color: var(--text-secondary)
+}
+
+.channel-page .video-grid {
+    background-color: var(--channel-contents-background);
+}
+
 /* channel video "grid" */
 
 .video-grid {
@@ -655,7 +674,7 @@ a.icon-link, a.icon-link > img {
     grid-template-columns: 160px 1fr;
     grid-template-rows: 90px;
     grid-auto-flow: row;
-    grid-gap: 10px 0;
+    grid-gap: 10px 10px;
     grid-template-areas:
     "thumbnail info";
 
@@ -700,7 +719,6 @@ a.icon-link, a.icon-link > img {
 /* normal video list */
 
 .video-list {
-    max-width: 850px;
     margin: auto;
     display: flex;
     flex-direction: column;
