Update playlist page to new CSS

--- a/LightTube/Views/Youtube/Playlist.cshtml
+++ b/LightTube/Views/Youtube/Playlist.cshtml
@@ -1,63 +1,70 @@
 @using YTProxy.Models
+@using System.Web
 @model LightTube.Contexts.PlaylistContext
 
 @{
 	ViewBag.Title = Model.Playlist.Title;
+	ViewBag.Metadata = new Dictionary<string, string>();
+	ViewBag.Metadata["og:title"] = Model.Playlist.Title;
+	ViewBag.Metadata["og:url"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}{Url.ActionContext.HttpContext.Request.Path}{Url.ActionContext.HttpContext.Request.QueryString}";
+	ViewBag.Metadata["og:image"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}/proxy?url={HttpUtility.UrlEncode(Model.Playlist.Thumbnail.FirstOrDefault()?.Url?.ToString())}";
+	ViewBag.Metadata["twitter:card"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}/proxy?url={HttpUtility.UrlEncode(Model.Playlist.Thumbnail.LastOrDefault()?.Url?.ToString())}";
+	ViewBag.Metadata["og:description"] = Model.Playlist.Description;
 	Layout = "_Layout";
+	ViewData["DisableOldCss"] = true;
 }
 
-<div class="playlist-container">
+<div class="playlist-page">
 	<div class="playlist-info">
-		<img class="playlist-thumbnail" src="@Model.Playlist.Thumbnail.Last().Url" alt="@Model.Playlist.Title">
-		<h1>@Model.Playlist.Title</h1>
-		<div>
-			<span>@Model.Playlist.VideoCount videos</span>
-			<span>•</span>
-			<span>@Model.Playlist.ViewCount</span>
-			<span>•</span>
-			<span>Last updated @Model.Playlist.LastUpdated</span>
+		<div class="thumbnail" style="background-image: url('@Model.Playlist.Thumbnail.Last().Url')">
+			<a href="/watch?v=@Model.Playlist.Videos.First().Id&list=@Model.Id">Play all</a>
 		</div>
-		<p>@Html.Raw(Model.Playlist.GetHtmlDescription())</p>
-		<br>
-		<div class="uploader">
-			<img class="uploader-avatar" alt="Uploader Avatar" src="@Model.Playlist.Channel.Avatars.Last().Url">
-			<div class="name-container">
-				<a href="/channel/@Model.Playlist.Channel.Id">@Model.Playlist.Channel.Name</a>
+		<p class="title">@Model.Playlist.Title</p>
+		<span class="info">@Model.Playlist.VideoCount videos • @Model.Playlist.ViewCount views • @Model.Playlist.LastUpdated</span>
+		<span class="description">@Html.Raw(Model.Playlist.GetHtmlDescription())</span>
+		<div class="channel-info">
+			<a href="/channel/@Model.Playlist.Channel.Id" class="avatar">
+				<img src="@Model.Playlist.Channel.Avatars.Last().Url">
+			</a>
+			<div class="name">
+				<a class="name" href="/channel/@Model.Playlist.Channel.Id">@Model.Playlist.Channel.Name</a>
 			</div>
-			<button style="display: none" class="subscribe-button" data-cid="@Model.Playlist.Channel.Id"></button>
+			<button class="subscribe-button" data-cid="@Model.Playlist.Channel.Id">Subscribe</button>
 		</div>
 	</div>
-
-	<div style="border-left:1px solid #bbbbbb;height:inherit;"></div>
-
-	<div style="width: 100%">
+	<div class="video-list playlist-video-list">
 		@foreach (VideoPreview video in Model.Playlist.Videos)
 		{
-			<div onclick="window.location = '/watch?v=@video.Id&list=@Model.Id'" class="playlist-video">
-				<div class="video-index">
+			<div class="playlist-video">
+				<a href="/watch?v=@video.Id&list=@Model.Id" class="index">
 					@video.Views
-				</div>
-				<div class="thumbnail" style="background-image: url('@video.Thumbnails.Last().Url')">
-					<span>@video.Duration</span>
-				</div>
+				</a>
+				<a href="/watch?v=@video.Id&list=@Model.Id" class="thumbnail"
+				   style="background-image: url('@video.Thumbnails.Last().Url')">
+					<span class="video-length">@video.Duration</span>
+				</a>
 				<div class="info">
-					<a href="/watch?v=@video.Id&list=@Model.Id" class="title">@video.Title</a>
-					<a href="/channel/@video.Channel.Id" class="uploader">@video.Channel.Name</a>
+					<a href="/watch?v=@video.Id&list=@Model.Id" class="title max-lines-2">
+						@video.Title
+					</a>
+					<div>
+						<a href="/channel/@video.Channel.Name">@video.Channel.Name</a>
+					</div>
 				</div>
 			</div>
 		}
-		<div class="page-controls">
-			@if (!string.IsNullOrWhiteSpace(Model.ContinuationToken))
-			{
-				<a href="/playlist?list=@Model.Id">First Page</a>
-			}
-			<div class="flex-divider"></div>
-			<span>•</span>
-			<div class="flex-divider"></div>
-			@if (!string.IsNullOrWhiteSpace(Model.Playlist.ContinuationToken))
-			{
-				<a href="/playlist?list=@Model.Id&continuation=@Model.Playlist.ContinuationToken">Next Page</a>
-			}
-		</div>
 	</div>
+</div>
+<div class="pagination-buttons">
+	@if (!string.IsNullOrWhiteSpace(Model.ContinuationToken))
+	{
+		<a href="/playlist?list=@Model.Id">First Page</a>
+	}
+	<div class="divider"></div>
+	<span>•</span>
+	<div class="divider"></div>
+	@if (!string.IsNullOrWhiteSpace(Model.Playlist.ContinuationToken))
+	{
+		<a href="/playlist?list=@Model.Id&continuation=@Model.Playlist.ContinuationToken">Next Page</a>
+	}
 </div>
