--- a/LightTube/Views/Shared/Error.cshtml
+++ b/LightTube/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-@model ErrorViewModel
+@model LightTube.Contexts.ErrorContext
 @{
 	ViewData["Title"] = "Error";
 	ViewData["DisableOldCss"] = true;
@@ -9,10 +9,10 @@
 <p>
 	You can try other alternatives to access this resource such as: 
 	<b>
-		<a href="https://invidio.us@($"{Model.RequestId}{Context.Request.QueryString}")">Invidious</a>
+		<a href="https://invidio.us@($"{Model.Path}{Context.Request.QueryString}")">Invidious</a>
 	</b> 
 	or
 	<b>
-		<a href="https://youtube.com@($"{Model.RequestId}{Context.Request.QueryString}")">YouTube</a>
+		<a href="https://youtube.com@($"{Model.Path}{Context.Request.QueryString}")">YouTube</a>
 	</b>
 </p>
