--- a/LightTube/Views/Youtube/Search.cshtml
+++ b/LightTube/Views/Youtube/Search.cshtml
@@ -17,7 +17,7 @@
 			case VideoPreview video:
 				<div class="video">
 					<a href="/watch?v=@video.Id" class="thumbnail"
-					   style="background-image: url('@video.Thumbnails.First().Url')"><span class="video-length">@video.Duration</span></a>
+					   style="background-image: url('@video.Thumbnails.LastOrDefault()?.Url')"><span class="video-length">@video.Duration</span></a>
 					<div class="info">
 						<a href="/watch?v=@video.Id" class="title max-lines-2">@video.Title</a>
 						<div style="display: flex; flex-direction: column; row-gap: 8px">
@@ -26,14 +26,14 @@
 								<span>•</span>
 								<span>@video.UploadedAt</span>
 							</a>
-							<a href="/channel/@video.Channel.Id"><img alt="Channel Avatar" src="@video.Channel.Avatars.First().Url"> @video.Channel.Name</a>
+							<a href="/channel/@video.Channel.Id"><img alt="Channel Avatar" src="@video.Channel.Avatars.LastOrDefault()?.Url"> @video.Channel.Name</a>
 						</div>
 					</div>
 				</div>
 				break;
 			case PlaylistPreview playlist:
 				<div class="playlist">
-					<a href="/watch?v=@playlist.FirstVideoId&amp;list=@playlist.Id" class="thumbnail" style="background-image: url('@playlist.Thumbnails.First().Url')">
+					<a href="/watch?v=@playlist.FirstVideoId&amp;list=@playlist.Id" class="thumbnail" style="background-image: url('@playlist.Thumbnails.LastOrDefault()?.Url')">
 						<div>
 							<span>@playlist.VideoCount</span>
 							<span>VIDEOS</span>
@@ -54,7 +54,7 @@
 			case ChannelPreview channel:
 				<div class="channel">
 					<a href="/channel/@channel.Id" class="avatar">
-						<img src="@channel.Thumbnails.First().Url" alt="Channel Avatar">
+						<img src="@channel.Thumbnails.LastOrDefault()?.Url" alt="Channel Avatar">
 					</a>
 					<a href="/channel/@channel.Id" class="info">
 						<span class="name max-lines-2">@channel.Title</span>
@@ -73,7 +73,7 @@
 			default:
 				<div class="video">
 					<span class="thumbnail"
-					   style="background-image: url('@itemPreview.Thumbnails.First().Url')"><span class="video-length">@preview.Type</span></span>
+					   style="background-image: url('@itemPreview.Thumbnails.LastOrDefault()?.Url')"><span class="video-length">@preview.Type</span></span>
 					<div class="info">
 						<span class="title max-lines-2">@itemPreview.Title</span>
 						<div>
