--- a/LightTube/wwwroot/css/desktop.css
+++ b/LightTube/wwwroot/css/desktop.css
@@ -277,6 +277,8 @@ a.icon-button, a.icon-button > img {
     align-items: center;
     justify-content: center;
     background-color: #ccc;
+    background-image: url('/img/player-error.png') !important;
+    background-size: contain;
 }
 
 .player.error > * {
@@ -462,6 +464,11 @@ a.icon-button, a.icon-button > img {
     color: var(--text-secondary);
 }
 
+.rich-video-grid > .video > .avatar {
+    width: 40px;
+    height: 40px;
+}
+
 /* list video item */
 
 .video a {
@@ -481,6 +488,16 @@ a.icon-button, a.icon-button > img {
 
     background-position-y: center;
     background-size: cover;
+}
+
+.video > .thumbnail.img-thumbnail {
+    padding: 0 !important;
+}
+
+.video > .thumbnail > img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .video > .thumbnail > .video-length {
